# test_ragu_automated

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
docs/: CNAME  index.md
src/test_ragu_automated/: example.py
